# applark

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  embeddings.py  events.py  http.py  llm.py  providers.py  redis.py  security.py
backend/app/modules/auth/: email.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/billing/: config.py  models.py  protocols.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/cover_letters/: agent.py  models.py  prompts.baseline.toml  prompts.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/cv/: agent.py  events.py  models.py  parser.py  prompts.baseline.toml  prompts.py  protocols.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/cv_tailor/: agent.py  models.py  prompts.baseline.toml  prompts.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/interview_prep/: agent.py  models.py  prompts.baseline.toml  prompts.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/jobs/: agent.py  events.py  models.py  prompts.baseline.toml  prompts.py  protocols.py  repository.py  router.py  schemas.py  scraper.py  service.py  tasks.py
backend/app/modules/matching/: agent.py  models.py  prompts.baseline.toml  prompts.py  protocols.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/shared/: feature_context.py
backend/app/prompts/: __init__.py  registry.py
backend/app/workers/: arq_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_init_extensions.py  0002_cv_module.py  0003_jobs_module.py  0004_matching_module.py  0005_cover_letters_module.py  0006_cv_tailor_module.py  0007_interview_prep_module.py  0008_auth_module.py  0009_user_scoping.py  0010_billing.py
backend/scripts/: sanity_check_cv_extractor.py  sanity_check_job_extractor.py  sanity_check_match_context.py  sanity_check_match_explainer.py  snapshot_prompts.py
backend/tests/: conftest.py  test_prompts_baselined.py
backend/tests/core/: test_events.py
backend/tests/evals/cv/: messy.json  multilingual.json  test_cv_extractor.py  typical.json
backend/tests/evals/jobs/: bullet_dense.json  noisy_scraped.json  partial_info.json  remote_only.json  test_job_extractor.py  typical_senior_frontend.json
frontend/: biome.json  package.json  (+4 more)
(+99 files in other folders)
