[project]
name = "applark"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic-ai==1.88.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "arq>=0.26.3",
    "redis>=5.2.0",
    "pymupdf>=1.25.0",
    "playwright>=1.50.0",
    "httpx>=0.28.0",
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.18",
    "pyjwt>=2.13.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
    "dirty-equals>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"app/modules/*/prompts.py" = ["E501"]  # LLM prompts are long-form by nature
"scripts/*.py" = ["E501"]  # Sample data + sample prompts in dev scripts

[tool.pyright]
include = ["app", "tests", "scripts"]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
